# probeagent

./: .env.example  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
profiles/: quick.yaml  standard.yaml  thorough.yaml
src/probeagent/: __init__.py  cli.py
src/probeagent/attacks/: __init__.py  agentic_exploitation.py  base.py  cognitive_exploitation.py  config_manipulation.py  credential_exfil.py  data_exfil.py  goal_hijacking.py  identity_spoofing.py  indirect_injection.py  prompt_injection.py  resource_abuse.py  social_manipulation.py  tool_misuse.py
src/probeagent/core/: __init__.py  analyzer.py  engine.py  models.py  reporter.py  scoring.py
src/probeagent/integrations/: __init__.py  (+6 more)
tests/: conftest.py  test_analyzer.py  test_attack_agentic_exploitation.py  test_attack_cognitive_exploitation.py  test_attack_config_manipulation.py  test_attack_credential_exfil.py  test_attack_identity_spoofing.py  test_attack_indirect_injection.py  test_attack_resource_abuse.py  test_attack_social_manipulation.py  test_cli.py  test_config.py  test_converting_proxy.py  test_engine_parallel.py  test_http_target.py  test_mock_target.py  test_models.py  test_openclaw_target.py  test_pyrit_adapters.py  test_pyrit_converters.py  test_reporter.py  test_scoring.py  test_strategy_parallel.py
tools/: demo_email_agent.py  run_demo.sh  test_target.py
tools/demo_payloads/: demo_script.md  invoice_email.txt  onboarding_slack.txt  quarterly_report.txt
(+11 files in other folders)
