[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probeagent-ai"
version = "0.1.1"
description = "Offensive security testing for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ProbeAgent Contributors" }]
keywords = ["security", "ai", "agents", "red-teaming", "pentesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]
game = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
]
pyrit = [
    "pyrit-ai>=0.11",
]
demo = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "anthropic>=0.34",
]

[project.urls]
Homepage = "https://github.com/sumamovva/probeagent"
Repository = "https://github.com/sumamovva/probeagent"
Issues = "https://github.com/sumamovva/probeagent/issues"

[project.scripts]
probeagent = "probeagent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
probeagent = ["web/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
